--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<head>  
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Googol</title>
+    <script type="module" src="new_tab_page.js"></script> <!--새로운 페이지로 이동-->
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div id="image">
+        <img src="images/googol.jpg" alt="googol logo">
+    </div>
+
+    <div class="search">
+        <form action="https://www.google.com">
+            <input type="text" placeholder="Googol 검색 또는 URL을 입력하세요"><button type="submit">Search</button>
+        </form>
+        
+    </div>
 </body>
 </html>
